--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 
           <ol class="timeline-list">
 
-            <li class="timeline-item">
+            <--!li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Internship Web Developer</h4>
 
@@ -538,7 +538,7 @@
                 Utilized web development skills to deliver high-quality online solutions
               </p>
 
-            </li>
+			</li-->
 
             <li class="timeline-item">
 
@@ -1270,3 +1270,4 @@
 </body>
 
 </html>
+
