--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 
           <ol class="timeline-list">
 
-            <--!li class="timeline-item">
+            <!--li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Internship Web Developer</h4>
 
@@ -1270,4 +1270,5 @@
 </body>
 
 </html>
+
 
