--- a/index.html
+++ b/index.html
@@ -527,18 +527,19 @@
 
           <ol class="timeline-list">
 
-            <!--li class="timeline-item">
+            <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Internship Web Developer</h4>
+              <h4 class="h4 timeline-item-title">Casual</h4>
 
-              <span>2024 — HexSoftwares</span>
+              <span>2025 — Agrimark St Helena Bay</span>
 
               <p class="timeline-text">
-                Designed and developed websites as part of project-based work
-                Utilized web development skills to deliver high-quality online solutions
+                Managed stock levels , unpacking and shelving 
+                Helped with filing of documentations
+				Provided excellent customer service 
               </p>
 
-			<!--/li>-->
+			</li>
 
             <li class="timeline-item">
 
@@ -1270,6 +1271,7 @@
 </body>
 
 </html>
+
 
 
 
